Changing the placements of my projects

--- a/index.html
+++ b/index.html
@@ -117,210 +117,11 @@
           <div class="container-fluid">
             <h1 class="mainHeadings">Portfolio</h1>
             <br />
-            <h2 class="subHeadings">HTML E-mails</h2>
+            <h2 class="subHeadings">Front-end sites</h2>
             <br />
 
             <div class="container">
               <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/yumi-tech/"
-                      target="_blank"
-                      ><img
-                        src="./img/yumi screenshot.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Promotional E-mail (Made with: HTML & CSS)
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/yumi-tech"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/yumi-tech/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/iPhone-11/"
-                      target="_blank"
-                      ><img
-                        src="./img/iphone 11 screenshot.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Promotional E-mail (Made with: HTML & CSS)
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/iPhone-11"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/iPhone-11/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/online-receipt/."
-                      target="_blank"
-                      ><img
-                        src="./img/online bill screenshot.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Transactional E-mail (Made with: HTML & CSS)
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/online-receipt"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/online-receipt/."
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/newsletter/"
-                      target="_blank"
-                      ><img
-                        src="./img/weekly newsletter screenshot.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Newsletter E-mail (Made with: HTML & CSS)
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/newsletter"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/newsletter/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/foundation-html-email/"
-                      target="_blank"
-                      ><img
-                        src="./img/foundations-email.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      HTML E-mail Template (Made with: Foundation 'Email
-                      Framework')
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/foundation-html-email"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/foundation-html-email/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div> -->
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a href="https://ag1479.github.io/vw-email/" target="_blank"
-                      ><img
-                        src="./img/vw-email.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Promotional E-mail (Made with: MJML Email Framework)
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/vw-email"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/vw-email/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
-                  <figure>
-                    <a
-                      href="https://ag1479.github.io/photoshop-email/"
-                      target="_blank"
-                      ><img
-                        src="./img/ps-email.png"
-                        class="img-fluid portfolioImages"
-                    /></a>
-                    <figcaption class="img-captions">
-                      Promotional E-mail (Made with: Foundation 'Email
-                      Framework')
-                    </figcaption>
-                  </figure>
-                  <div class="text-center">
-                    <a
-                      class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/photoshop-email"
-                      target="_blank"
-                      >View code</a
-                    >
-                    <a
-                      class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/photoshop-email/"
-                      target="_blank"
-                      >View site</a
-                    >
-                  </div>
-                </div>
-                <h2 class="subHeadings">
-                  Front-End Sites
-                </h2>
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
@@ -518,6 +319,206 @@
                     >
                   </div>
                 </div> -->
+                <h2 class="subHeadings">HTML emails</h2>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/yumi-tech/"
+                      target="_blank"
+                      ><img
+                        src="./img/yumi screenshot.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional Email (Made with: HTML & CSS)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/yumi-tech"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/yumi-tech/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/iPhone-11/"
+                      target="_blank"
+                      ><img
+                        src="./img/iphone 11 screenshot.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional Email (Made with: HTML & CSS)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/iPhone-11"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/iPhone-11/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/online-receipt/."
+                      target="_blank"
+                      ><img
+                        src="./img/online bill screenshot.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Transactional Email (Made with: HTML & CSS)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/online-receipt"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/online-receipt/."
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/newsletter/"
+                      target="_blank"
+                      ><img
+                        src="./img/weekly newsletter screenshot.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Newsletter Email (Made with: HTML & CSS)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/newsletter"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/newsletter/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/foundation-html-email/"
+                      target="_blank"
+                      ><img
+                        src="./img/foundations-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      HTML E-mail Template (Made with: Foundation 'Email
+                      Framework')
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/foundation-html-email"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/foundation-html-email/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div> -->
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a href="https://ag1479.github.io/vw-email/" target="_blank"
+                      ><img
+                        src="./img/vw-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional Email (Made with: MJML Email Framework)
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/vw-email"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/vw-email/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                  <figure>
+                    <a
+                      href="https://ag1479.github.io/photoshop-email/"
+                      target="_blank"
+                      ><img
+                        src="./img/ps-email.png"
+                        class="img-fluid portfolioImages"
+                    /></a>
+                    <figcaption class="img-captions">
+                      Promotional Email (Made with: Foundation 'Email
+                      Framework')
+                    </figcaption>
+                  </figure>
+                  <div class="text-center">
+                    <a
+                      class="view-code-button btn btn-info btn-sm"
+                      href="https://github.com/ag1479/photoshop-email"
+                      target="_blank"
+                      >View code</a
+                    >
+                    <a
+                      class="visit-site-button btn btn-info btn-sm"
+                      href="https://ag1479.github.io/photoshop-email/"
+                      target="_blank"
+                      >View site</a
+                    >
+                  </div>
+                </div>
+                <h2 class="subHeadings">
+                  Front-End Sites
+                </h2>
               </div>
             </div>
           </div>
