--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
               over a year now, I've been studying nothing but the front-end side
               of web development. To get a better idea of how much I know, you
               can view my work
-              <a class="portfolio-link" href="#portfolio-page">here</a>. I've
+              <a class="portfolio-link" href="#portfolio-page">here</a>.
+            </p>
+            <!-- I've
               also recently been able to use a few email marketing systems like
               MailChimp and Salesforce Marketing Cloud to create and send out
-              campaigns.
-            </p>
+              campaigns. -->
             <br />
             <h2 class="subHeadings">My skills</h2>
             <br />
@@ -101,13 +102,13 @@
                 <i class="fab fa-js javascriptIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">Javascript</h3>
               </div>
-              <!-- <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                <i class="fab fa-react reactIcon frontEndIcons"></i>
-                <h3 class="frontEndElements">React</h3>
-              </div> -->
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                 <i class="fas fa-mail-bulk mailChimpIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">ESP</h3>
+              </div>
+              <div class="col-lg-12 col-md-6 col-sm-6 p-5">
+                <i class="fab fa-react reactIcon frontEndIcons"></i>
+                <h3 class="frontEndElements">React</h3>
               </div>
             </div>
           </div>
