Displaying my projects differently
Moving some things around and also I added a new skill 'Sass'

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
               campaigns. -->
             <br />
             <h2 class="subHeadings">My skills</h2>
+            <p class="paragraphs">
+              Technologies I am able to work with:
+            </p>
             <br />
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
@@ -99,13 +102,17 @@
                 <h3 class="frontEndElements">CSS3</h3>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
+                <i class="fab fa-sass sassIcon frontEndIcons"></i>
+                <h3 class="frontEndElements">SASS</h3>
+              </div>
+              <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                 <i class="fab fa-js javascriptIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">Javascript</h3>
               </div>
-              <div class="col-lg-6 col-md-6 col-sm-6 p-5">
+              <!-- <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                 <i class="fas fa-mail-bulk mailChimpIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">ESP</h3>
-              </div>
+              </div> -->
               <div class="col-lg-12 col-md-6 col-sm-6 p-5">
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
@@ -154,26 +161,26 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/sujatas-bakery/"
+                      href="https://ag1479.github.io/skype-landing-page/"
                       target="_blank"
                       ><img
-                        src="./img/sujatas-bakery.png"
+                        src="./img/skype landing page.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Online cake shop (Made with: HTML, CSS and Bootstrap 4)
+                      Skype App Landing Page (Made with: HTML, CSS (Flexbox))
                     </figcaption>
                   </figure>
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/sujatas-bakery"
+                      href="https://github.com/ag1479/skype-landing-page"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/sujatas-bakery/"
+                      href="https://ag1479.github.io/skype-landing-page/"
                       target="_blank"
                       >View site</a
                     >
@@ -238,31 +245,32 @@
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
-                      href="https://ag1479.github.io/skype-landing-page/"
+                      href="https://ag1479.github.io/sujatas-bakery/"
                       target="_blank"
                       ><img
-                        src="./img/skype landing page.png"
+                        src="./img/sujatas-bakery.png"
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Skype Landing Page (Made with: HTML, CSS (Flexbox))
+                      Online cake shop (Made with: HTML, CSS and Bootstrap 4)
                     </figcaption>
                   </figure>
                   <div class="text-center">
                     <a
                       class="view-code-button btn btn-info btn-sm"
-                      href="https://github.com/ag1479/skype-landing-page"
+                      href="https://github.com/ag1479/sujatas-bakery"
                       target="_blank"
                       >View code</a
                     >
                     <a
                       class="visit-site-button btn btn-info btn-sm"
-                      href="https://ag1479.github.io/skype-landing-page/"
+                      href="https://ag1479.github.io/sujatas-bakery/"
                       target="_blank"
                       >View site</a
                     >
                   </div>
                 </div>
+
                 <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
