--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
               <div class="col-lg-12 col-md-6 col-sm-6 p-5">
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
+                <p class="paragraphs">
+                  Technology I am trying to master
+                </p>
               </div>
             </div>
           </div>
@@ -384,7 +387,7 @@
                     >
                   </div>
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 p-4">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
                       href="https://ag1479.github.io/online-receipt/."
@@ -439,7 +442,7 @@
                       >View site</a
                     >
                   </div>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-6 col-md-6 col-sm-12 p-4">
                   <figure>
                     <a
@@ -536,7 +539,7 @@
             <br />
             <div class="contact-details">
               <div id="row-width" class="row">
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
+                <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                   <a
                     href="https://www.linkedin.com/in/ashik-gurung-1b6aa3192/"
                     target="_blank"
@@ -544,19 +547,19 @@
                   ></a>
                   <p class="paragraphs">Linkedin</p>
                 </div>
-                <!-- <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
+                <!-- <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                   <a href="https://twitter.com/AG0932988842" target="_blank"
                     ><i class="fab fa-twitter-square"></i
                   ></a>
                   <p class="paragraphs">Twitter</p>
                 </div> -->
-                <div class="col-lg-6 col-md-6 col-sm-6 col-12 p-5">
+                <div class="col-lg-6 col-md-6 col-sm-6 p-5">
                   <a href="mailto:itsashikgurung@gmail.com"
                     ><i class="fas fa-envelope-square"></i
                   ></a>
                   <p class="paragraphs">E-mail</p>
                 </div>
-                <div class="col-lg-12 col-md-6 col-sm-6 col-12 p-5">
+                <div class="col-lg-12 col-md-6 col-sm-6 p-5">
                   <a href="https://github.com/ag1479" target="_blank"
                     ><i class="fab fa-github-square"></i
                   ></a>
@@ -575,7 +578,7 @@
           <div class="col-lg-12">
             <p class="footer-paragraph">
               Copyright &copy; 2019&nbsp;&bull; Ashik Gurung&nbsp;&nbsp;<br />Front-end
-              Developer from London.
+              Developer from London
             </p>
           </div>
         </div>
