--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
                 <p class="paragraphs">
-                  Technology I am trying to master
+                  Technology I'm trying to master
                 </p>
               </div>
             </div>
