Project caption update

--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                         class="img-fluid portfolioImages"
                     /></a>
                     <figcaption class="img-captions">
-                      Promotional Email (Made with: MJML Email Framework)
+                      Promotional Email (Made with: Foundation 'Email
+                      Framework')
                     </figcaption>
                   </figure>
                   <div class="text-center">
