--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav
           id="navbar"
           class="navbar navbar-dark navbar-expand-md sticky-top"
-          style="background-color: #223949;"
+          style="background-color: #223949"
         >
           <!-- #DB4437 -->
           <div class="container-fluid">
@@ -88,9 +88,7 @@
               campaigns. -->
             <br />
             <h2 class="subHeadings">My skills</h2>
-            <p class="paragraphs">
-              Technologies I am able to work with:
-            </p>
+            <p class="paragraphs">Technologies I am able to work with:</p>
             <br />
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 p-5">
@@ -116,9 +114,7 @@
               <div class="col-lg-12 col-md-12 col-sm-12 p-5">
                 <i class="fab fa-react reactIcon frontEndIcons"></i>
                 <h3 class="frontEndElements">React</h3>
-                <p class="paragraphs">
-                  Technology I'm trying to master
-                </p>
+                <p class="paragraphs">Technology I'm trying to master</p>
               </div>
             </div>
           </div>
@@ -555,7 +551,7 @@
                   <p class="paragraphs">Twitter</p>
                 </div> -->
                 <div class="col-lg-6 col-md-6 col-sm-6 p-5">
-                  <a href="mailto:itsashikgurung@gmail.com"
+                  <a href="mailto:itsashikgurung@outlook.com"
                     ><i class="fas fa-envelope-square"></i
                   ></a>
                   <p class="paragraphs">E-mail</p>
